Add setup.py and requirements

--- a/notebooks/anomaly_detection.ipynb
+++ b/notebooks/anomaly_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b6d05935-e347-40de-91e3-7969195ab8e2",
    "metadata": {
     "tags": []
@@ -33,12 +33,12 @@
     "from collections import defaultdict\n",
     "from skimage import exposure\n",
     "\n",
-    "from checkpoint import Checkpoint\n",
-    "from model import Model\n",
-    "from data import Data\n",
-    "from loss import Loss\n",
-    "from trainer import Trainer\n",
-    "from helpers import prepare, quantize, setup_opt_drn, setup_opt_drct, setup_logger, calculate_ssim, calculate_mse, calculate_psnr, min_max_scaling, histogram_equalization, analyze_window_sizes, analyze_window_sizes_gkd, process_images, process_gkd_images, plot_roc_curve, find_optimal_threshold"
+    "# from checkpoint import Checkpoint\n",
+    "from src.model import Model\n",
+    "from src.data import Data\n",
+    "from src.loss import Loss\n",
+    "from src.trainer import Trainer\n",
+    "from src.helpers import prepare, quantize, setup_opt_drn, setup_opt_drct, setup_logger, calculate_ssim, calculate_mse, calculate_psnr, min_max_scaling, histogram_equalization, analyze_window_sizes, analyze_window_sizes_gkd, process_images, process_gkd_images, plot_roc_curve, find_optimal_threshold"
    ]
   },
   {
@@ -812,9 +812,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "miniconda",
+   "display_name": "venv",
    "language": "python",
-   "name": "miniconda"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -826,7 +826,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
