--- a/notebooks/efficientAD.ipynb
+++ b/notebooks/efficientAD.ipynb
@@ -735,9 +735,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "miniconda3",
+   "display_name": "venv",
    "language": "python",
-   "name": "miniconda3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -749,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
